<resources>
    <string name="app_name">week1</string>
    <string name="_1">1)Включите/выключите режим в самолете для демонстрации приема сообщений от систнемы</string>
    <string name="_2">2)Отправить сообщение</string>
    <string name="_3">3)Отправить сообщение локально</string>
    <string name="services">Services</string>
    <string name="content_providers">Content providers</string>
    <string name="broadcast_receivers">Broadcast receivers</string>
    <string name="id">ID</string>
    <string name="number">Введите номер</string>
    <string name="ContactName">Имя:</string>
    <string name="ContactNumber">Номер:</string>
    <string name="enter_name">Введите имя</string>
    <string name="activity">Пример работы activity</string>
    <string name="start_vibro">Запустить вибрацию</string>
    <string name="start_music">Запустить музыку</string>
    <string name="stop_vibro">Остановить вибрацию</string>
    <string name="stop_music">Остановить музыку</string>
    <string name="content_provider">Пример работы Content provider</string>
    <string name="add_Contact">Добавить контакт</string>
    <string name="del_contact">Удалить все контакты</string>
    <string name="_4">4)Изменить часовой пояс для отображения уведомления(работает вне приложения)</string>
    <string name="service">Пример работы Service</string>
</resources>